# unstructured-api-runpod

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  LICENSE  README.md  cliff.toml  compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yml
.runpod/: hub.json  tests.json
scripts/: dev.sh  local-testing.sh  remote-testing.py
tests/: conftest.py  test_document.py  test_main.py  test_server.py  test_settings.py  test_utils.py  test_worker.py
unstructured_api/: __main__.py  schema.py  server.py  settings.py  worker.py
unstructured_api/process/: document.py  utils.py
