[project]
name = "unstructured-api"
version = "1.0.5"
description = "Document parsing/OCR API powered by unstructured, deployed on RunPod serverless"
authors = [{ name = "philogicae" }]
requires-python = ">=3.14,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "imagededup>=0.2",
    "magika>=0.5",
    "onnx>=1.21",
    "opencv-contrib-python-headless>=4.10",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.18",
    "runpod>=1.7",
    "unstructured[all-docs,huggingface]",
    "uvicorn>=0.34",
]

[tool.uv]
no-binary-package = ["imagededup"]

[project.urls]
Repository = "https://github.com/philogicae/unstructured-api-runpod"

[project.scripts]
unstructured-api = "unstructured_api.__main__:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "ruff",
    "ty",
]

[tool.hatch.build]
include = ["unstructured_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--durations=10"
filterwarnings = [
    "ignore::DeprecationWarning:unstructured.*",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
